--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA' //open JDK
 
 
     compileOnly 'org.projectlombok:lombok'
